# auto_docking_aruco

./: README.md
aruco_ros/aruco_ros/include/aruco_ros/: ArucoThresholdConfig.h
aruco_ros/aruco_ros/launch/: marker_publisher.launch  single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
docking_movement/: CMakeLists.txt  package.xml
docking_movement/launch/: aruco_gazebo.launch  aruco_marker_finder.launch  dock.launch  usb_cam_stream_publisher.launch
docking_movement/recorded data/: data.csv
docking_movement/scripts/: README.md  Range[1-2m]Angl[90].csv  data_log.csv  dock.py  dock_hardware.py  dock_test_auto.py  docking_OOP.cpp  docking_OOP.py  docking_light.cpp  gimme_mah_points.py
docking_movement/scripts/failed test/: dubin_path_dock.py  dubin_path_dock_sim.py  dubin_test.py  quaternion_convert.py
tars_ros/lingao_base/: 50-tars-v4.rules  CMakeLists.txt  README.md  package.xml
tars_ros/lingao_base/include/: base_driver.h  calibrate_gyro.h  data_format.h  data_stream.h
tars_ros/lingao_base/launch/: lingao_base_driver.launch
tars_ros/lingao_base/src/: Serial_Async.cpp  TCP_Async.cpp  UDP_Async.cpp  base_driver.cpp  data_stream.cpp  lingao_base_node.cpp
tars_ros/lingao_description/: package.xml
tars_ros/lingao_description/launch/: model.launch
tars_ros/lingao_description/urdf/: LA_4WD_LingFeng.urdf
tars_ros/lingao_msgs/: CMakeLists.txt  package.xml
tars_ros/tars_bringup/: CMakeLists.txt  README.md  package.xml
tars_ros/tars_bringup/launch/: bringup.launch  robot.launch  tars_base_driver.launch
tars_ros/tars_bringup/launch/include/: imu.launch  lidar_laser.launch  (+2 more)
tars_ros/tars_bringup/src/: flat_world_odom_node.cpp
tars_ros/tars_msgs/: CMakeLists.txt  package.xml
tars_ros/tars_msgs/msg/: TarsRCStatus.msg
usb_cam/: CMakeLists.txt  package.xml
usb_cam/launch/: usb_cam-test.launch
usb_cam/nodes/: usb_cam_node.cpp
usb_cam/src/: usb_cam.cpp
(+1 files in other folders)
