<?xml version="1.0.0"?>
    <package>
    <name>lingao_base</name>
    <version>1.0.0</version>
    <description>The TARS v4.0 Mobile Platform package</description>
    <maintainer email="kennedywai@helloworldrobotics.xyz">kennedywai</maintainer>

    <license>GPL</license>

    <author email="kennedywai@helloworldrobotics.xyz">kennedywai</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf2</build_depend>
		<build_depend>tf2_ros</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>lingao_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>tf2</run_depend>
		<run_depend>tf2_ros</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>lingao_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>imu-filter-madgwick</run_depend>
    <run_depend>imu_calib</run_depend>

    <export></export>
</package>
