<?xml version="1.0"?>
<package>
  <name>tars_msgs</name>
  <version>0.0.1</version>
  <description>The TARS v4.0 msgs package</description>
  <maintainer email="kennedywai@helloworldrobotics.xyz">kennedywai</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>

  </export>
</package>
